<resources>
    <string name="app_name">Forestory</string>
    <string name="main_greeting">Hello %s! How was your day?</string>
    <string name="title_add_post">Add Story</string>
    <string name="max_tag_count_hint">Tag input (up to %d)</string>
    <string name="enter_content_hint">Enter the content</string>
    <string name="write_text">Write</string>
    <string name="crop_image">Crop</string>
    <string name="title_image_zoom">View Details</string>
    <string name="title_post">Post</string>
    <string name="notify_forest_friends">Notify Forest Friends</string>
    <string name="search_story_hint">Search Stories (# Tag Search)</string>
    <string name="no_search_results">No search results found</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_album">Select Album</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_story_message">No stories yet.\nLeave a new story!</string>
    <string name="settings">Settings</string>
    <string name="confirm_delete_photo">Do you want to delete the photo?</string>
    <string name="camera_permission_denied">Camera permission has been denied.</string>
    <string name="max_tag_count_info">Tags can be added up to %d.</string>
    <string name="post_added">The post has been added successfully.</string>
    <string name="post_upload_failed">Failed to upload the post.</string>
    <string name="add_comment_failure">Failed to add a comment. [%d]</string>
    <string name="notify_post_being_shared">The post is currently being shared with Forest Friends.</string>
    <string name="delete_success">Deleted successfully.</string>
    <string name="delete_failure">Failed to delete.</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete the post?</string>
    <string name="setting_theme">Theme settings</string>
    <string name="setting_language">Language</string>
    <string name="system_settings">System Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language_kor" translatable="false">한국어</string>
    <string name="language_eng" translatable="false">English</string>
    <string name="noti_channel_name">Comment Notification</string>
    <string name="noti_channel_description">Notification of arrival of comments from forest friends</string>
    <string name="noti_title_new_comment">A comment has been added</string>
    <string name="noti_content_new_comment">You have received a comment from the Forest Friends.</string>
    <string name="notification_permission_denied">Notification permission has been denied.</string>
    <string name="press_twice_to_exit">Press the button again to exit.</string>
    <string name="delivering_news_to_forest_friends">Delivering news to the forest friends</string>
    <string name="delivering_news_message">Has gone to deliver news to the friends in the forest</string>
    <string name="setting_notification">Comment Notifications</string>
    <string name="require_notification_permission">Notification permission has been denied\nPlease allow notification permission in settings.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_settings_completed">Profile settings saved</string>
    <string name="app_description">My Own SNS with Animal AI Friends</string>
    <string name="start">START</string>
    <string name="setting_screen_lock">Screen lock</string>
    <string name="setting_backup">Backup/Restore</string>
    <string name="setting_open_source">OpenSource license</string>
    <string name="setting_privacy_policy">Privacy policy</string>
    <string name="version">Version</string>
    <string name="noti_title_failure">Failed to deliver the news</string>
    <string name="noti_content_failure">Please try again later</string>
    <string name="setting">require_notification_permission</string>
    <string name="password">Password</string>
    <string name="biometric_authentication">Biometric authentication</string>
    <string name="enter_password">Please enter your password</string>
    <string name="password_unmatch">Password doesn\'t match</string>
    <string name="enter_password_one_more">Please enter your password\n one more time</string>
    <string name="password_set_complete">Your password has been set</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Please enter a new password</string>
    <string name="warning_password">If you lose your password, you cannot recover it</string>
    <string name="data_backup">Back up data</string>
    <string name="data_restore">Restore data</string>
    <string name="linkage">LINKAGE</string>
    <string name="unlink">UNLINK</string>
    <string name="confirm_disconnect_account">Do you want to disconnect Google Drive?</string>
    <string name="connected_google_drive">Connected to Google Drive</string>
    <string name="disconnected_google_drive">Disconnected to Google Drive</string>
    <string name="fail_connect_google_drive">Failed to connect with Google Drive</string>
    <string name="fail_disconnect_google_drive">Failed to disconnect with Google Drive</string>
    <string name="fail_backup">Data backup failed</string>
    <string name="success_backup">Your data has been backed up</string>
    <string name="noti_title_backup">Backup in progress</string>
    <string name="backup_start">Data backup started</string>
    <string name="confirm_want_to_backup">Do you want to proceed with the backup?</string>
    <string name="noti_title_restore">Restore in progress</string>
    <string name="success_restore">Your data has been restored</string>
    <string name="fail_restore">Data restore failed</string>
    <string name="confirm_want_to_restore">Do you want to proceed with the restore?\nPosts currently created will be deleted</string>
    <string name="restore_start">Data restore started</string>
    <string name="nodata_restore">No data to restore</string>
    <string name="notify_post_exist_shared">There\'s a post announcing the news\nPlease try again in a momentarily</string>
    <string name="can_not_exit_while_backup_restore">Unable to exit during data backup/restore</string>
    <string name="info">Info</string>
    <string name="click_confirm_to_agree_privacy_policy">By clicking the confirm button, you agree to the privacy policy</string>
    <string name="highlight_privacy_policy">privacy policy</string>
    <string name="title_purchase">Purchase tickets</string>
    <string name="ticket_usage_guide">Ticket Usage Guide\n\n1. Tickets are train passes to the Forest Village, a necessary item to deliver the content of the posts to forest friends.\n\n2. Tickets are stored locally and will be lost if you clear app data or delete the app.\n\n3. Even when using the data backup / restore function, your tickets will not be backed up or restored.</string>
    <string name="current_tickets">Current Tickets</string>
    <string name="tickets_2">2 Tickets</string>
    <string name="tickets_10">10 Tickets</string>
    <string name="tickets_20">20 Tickets</string>
    <string name="tickets_60">60 Tickets</string>
    <string name="tickets_100">100 Tickets</string>
    <string name="tickets_count">%d tickets</string>
    <string name="fail_to_connect_payment">Payment service connection failed</string>
    <string name="fail_to_purchase">An error occurred while purchasing. Please try again</string>
    <string name="charge">Charge</string>
    <string name="purchase_complete">Purchase of %d tickets completed</string>
    <string name="try_for_free">Try for free! (%d remaining)</string>
    <string name="recharge">Recharge</string>
    <string name="not_enough_tickets">😢 Not enough tickets</string>
    <string name="confirm_spend_ticket">Do you want to spend a ticket to deliver the news?</string>
    <string name="deliver">Deliver</string>
    <string name="tickets_free">Free Ticket</string>
    <string name="preparing">Preparing</string>
    <string name="view_ads">View ads</string>
    <string name="duplicate_tag_exist">Duplicated tags exist</string>
</resources>