<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kjcgothic_bold"
            android:text="@string/setting_language"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/view"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibutton_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ripple_effect"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <RadioButton
                android:id="@+id/radio_kor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kjcgothic_bold"
                android:textColor="@color/black"
                android:text="@string/language_kor"
                android:layoutDirection="rtl" />

            <RadioButton
                android:id="@+id/radio_eng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kjcgothic_bold"
                android:textColor="@color/black"
                android:text="@string/language_eng"
                android:layoutDirection="rtl" />
        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>