<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lightgray_round"
        android:gravity="center"
        android:minWidth="300dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kjcgothic_bold"
            android:gravity="center"
            android:text="@string/confirm_spend_ticket"
            android:textColor="@color/lightblack"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_ticket" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/kjcgothic_bold"
                android:gravity="center_vertical"
                android:text="@string/current_tickets"
                android:textColor="@color/lightblack"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/currentTicket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/kjcgothic_bold"
                android:gravity="center_vertical"
                android:textColor="@color/green"
                android:textSize="13sp" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_green_round"
            android:text=""
            android:textColor="@color/white"
            android:fontFamily="@font/kjcgothic_bold"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_darkgray_round"
            android:text="@string/cancel"
            android:fontFamily="@font/kjcgothic_bold"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</layout>